# cppu

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux.yml  windows.yml
examples/simple/: simple.c
lib/cpu_utils/: CMakeLists.txt
lib/cpu_utils/inc/: carry_addsub.h
lib/cpu_utils/tests/: CMakeLists.txt  carry_addsub_test.cpp  test_main.cpp
lib/elf/: CMakeLists.txt
lib/elf/inc/: elf_file.h  elf_headers.h
lib/elf/src/: elf_file.cpp
lib/elf/tests/: CMakeLists.txt  elf_test.cpp  test_main.cpp
lib/kernel/: CMakeLists.txt
lib/kernel/inc/: if_kernel.h  linux64_kernel.h  memory_adapter.h  vmemory.h
lib/kernel/src/: linux64_kernel.cpp  vmemory.cpp
lib/utils/: CMakeLists.txt
lib/utils/tests/: CMakeLists.txt  carry_addsub_test.cpp
lib/x86-64/: CMakeLists.txt
lib/x86-64/inc/: x86-64.h  x86-64_ops.h  x86-64_structs.h  x86-64_types.h  x86-64_utils.h
lib/x86-64/src/: x86-64.cpp
lib/x86-64/tests/: CMakeLists.txt  test_main.cpp  utils_test.cpp  x86-64_test.cpp
src/: cppu.cpp
